First draft of getting the asciidoclet to run on the new Javadoc APIs under Java 11.
Many things are broken. This is currently more of an exploratory prototype, than it is working but incomplete code.
There are a lot of ugly hacks here, to work around the new restrictions of the javadoc APIs.